# rattletrap

./: .gitignore  Cargo.toml  build.rs
avk12/: Cargo.toml
avk12/src/: canvas.rs  device.rs  lib.rs  pipeline.rs  resource.rs  sync.rs  task.rs
common/: Cargo.toml
common/src/: lib.rs
cougher/: Cargo.toml  build.rs
cougher/shaders/: textured_tri_mesh.frag
cougher/spv_rs_codegen/: Cargo.toml
cougher/src/: backends.rs  lib.rs  macros.rs  render_objs.rs  traits.rs  vk12.rs  vk_wrap.rs
cougher/src/backends/: vulkan_1_2.rs  vulkan_common.rs
cougher/src/vk12/: buffer.rs  command.rs  device.rs  image2d.rs  image_vk.rs  instance.rs  sync.rs
cougher/src/vk_wrap/: buffer.rs  command.rs  device.rs  image_2d.rs  instance.rs  mesh_renderer.rs  pipeline.rs  swapchain.rs  sync.rs
cougher/src/vk_wrap/shaders/: common_structs.glsl  textured_tri_mesh.frag  textured_tri_mesh.vert
data/levels/: 1.lvl  1.ron
game/: Cargo.toml  log.txt
game/data/levels/: 2.ron
game/src/: game.rs  inputs.rs  main.rs  scene.rs
game/src/game/: game_object.rs
game/src/renderer/: camera.rs  texture.rs
game/src/renderer/shaders/: mesh.vert
physics/: Cargo.toml
physics/src/: closest_info.rs  collision_shape.rs  intersection_info.rs  lib.rs  orient.rs  utils.rs
physics/src/collision_shape/: capsule.rs  convex_mesh.rs  planar_polygon.rs  rectangle.rs  sphere.rs  tablet.rs  triangle.rs
renderer/: Cargo.toml  build.rs
renderer/src/: lib.rs  mesh.rs  mesh_pipeline.rs  pipelines.rs  renderables.rs  wrappers.rs
renderer/src/pipelines/: data_transfer.rs  textured_tri_mesh.rs
renderer/src/pipelines/shaders/: common_structs.glsl  textured_tri_mesh.frag  textured_tri_mesh.vert
renderer/src/renderables/: camera.rs  texture.rs  tri_mesh.rs
renderer/src/shaders/: mesh.frag  mesh.vert
renderer/src/wrappers/: buffer.rs  command.rs  command_buffer.rs  command_pool.rs  context.rs  descriptor_pool.rs  descriptor_set.rs  descriptor_set_layout.rs  fence.rs  framebuffer.rs  gpu_allocation.rs  image.rs  image_access.rs  image_view.rs  instance.rs  logical_device.rs  pipeline.rs  pipeline_layout.rs  render_pass.rs  sampler.rs  semaphore.rs  shader_module.rs  swapchain.rs
renderer_wgpu/: Cargo.toml
renderer_wgpu/src/: lib.rs  mesh.rs  mesh_pipeline.rs
renderer_wgpu/src/shaders/: mesh.wgsl
rendering/: Cargo.toml
rendering/src/: camera.rs  lib.rs  model.rs  swapchain.rs  tex_mesh.rs  texture.rs  utils.rs  vkraii.rs
rendering/src/shaders/: triangle.vert  triangle.wgsl
rendering/src/vkraii/: command.rs  device.rs  pipeline.rs  resource.rs  swapchain.rs  sync.rs
rhi/: Cargo.toml
rhi/src/: init_helpers.rs  lib.rs
rhi2/: Cargo.toml
rhi2/src/: buffer.rs  command.rs  device.rs  graphics_pipeline.rs  image.rs  instance.rs  lib.rs  shader.rs  swapchain.rs  sync.rs
rhi3/: Cargo.toml
rhi3/src/: lib.rs
schema/: mesh.capnp
shader_info/: Cargo.toml
shader_info/src/: main.rs
src/: ecs.rs  game.rs  main.rs  renderer.rs  renderer2.rs
src/game/: game_object.rs
src/renderer/: asset_manager.rs  camera.rs  level.rs  material.rs  mesh.rs  texture.rs
src/renderer/shaders/: blit.wgsl  mesh.frag  mesh.vert  mesh.wgsl
src/renderer2/: camera.rs  mesh.rs
src/renderer2/shaders/: triangle.wgsl
src/shaders/: triangle.frag  triangle.vert
vk12_rhi2/: Cargo.toml
vk12_rhi2/src/: buffer.rs  command.rs  device.rs  graphics_pipeline.rs  image.rs  init_helpers.rs  instance.rs  lib.rs  memory.rs  shader.rs  swapchain.rs  sync.rs
