[package]
name = "rattletrap"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "3"
members = ["avk12", "game", "physics"]

[workspace.dependencies]
winit = { version = "0.30.12", features = ["android-native-activity"] }
enumflags2 = "0.7.12"
getset = "0.1.6"
log = "0.4.29"
hashbrown = "0.17.0"
anyhow = "1.0.102"
ron = "0.12.0"
bytemuck = "1.24.0"
serde = { version = "1.0.228", features = ["derive"] }
glam = { version = "0.30.9", features = ["bytemuck", "serde"] }
env_logger = "0.11.10"

[dependencies]
avk12 = { path = "avk12" }
image = "0.25.9"
