[package]
name = "avk12"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
enumflags2 = { workspace = true }
getset = { workspace = true }
hashbrown = { workspace = true }
log = { workspace = true }
winit = { workspace = true }
ash = "0.38.0"
ash-window = "0.13.0"
gpu-allocator = { version = "0.28.0", default-features = false, features = ["hashbrown", "vulkan"] }
naga = { version = "29.0.3", features = ["wgsl-in", "glsl-in", "spv-out"] }
typed-builder = "0.23.2"
