[package]
name = "cougher"
version = "0.1.0"
edition = "2024"

[dependencies]
ash = "0.38.0"
ash-window = "0.13.0"
bytemuck = { version = "1.24.0", features = ["derive"] }
enumflags2 = "0.7.12"
gpu-allocator = { version = "0.28.0", default-features = false, features = ["vulkan", "hashbrown"] }
hashbrown = "0.16.0"
image = "0.25.8"
raw-window-handle = "0.6.2"
thiserror = "2.0.17"
winit = "0.30.12"
