[package]
name = "game"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "game"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
bytemuck.workspace = true
common = { version = "0.1.0", path = "../common" }
env_logger.workspace = true
getset.workspace = true
glam.workspace = true
hashbrown.workspace = true
image.workspace = true
indexmap.workspace = true
physics = { version = "0.1.0", path = "../physics" }
rendering = { version = "0.1.0", path = "../rendering" }
serde.workspace = true
winit.workspace = true
