[package]
name = "renderer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
ash = "0.38.0"
ash-window = "0.13.0"
bytemuck = { version = "1.23.2", features = ["derive"] }
getset = "0.1.6"
gpu-allocator = { version = "0.27.0", default-features = false, features = ["vulkan"] }
hashbrown = "0.15.5"
image = "0.25.6"
include_bytes_aligned = "0.1.4"
raw-window-handle = "0.6.2"
thiserror = "2.0.16"
winit = "0.30.12"
