[package]
name = "renderer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
avk12 = { version = "0.1.0", path = "../avk12" }
bytemuck.workspace = true
common = { version = "0.1.0", path = "../common" }
getset.workspace = true
glam.workspace = true
hashbrown.workspace = true
image.workspace = true
indexmap.workspace = true
serde.workspace = true
