[package]
name = "renderer_wgpu"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
bytemuck.workspace = true
common = { version = "0.1.0", path = "../common" }
futures-executor = "0.3.32"
glam.workspace = true
image.workspace = true
indexmap.workspace = true
log.workspace = true
serde.workspace = true
wgpu = "30.0.0"
winit.workspace = true
