[package]
name = "rhi"
version = "0.1.0"
edition = "2024"

[dependencies]
ash = "0.38.0"
ash-window = "0.13.0"
enumflags2 = "0.7.12"
getset = "0.1.6"
gpu-allocator = { version = "0.28.0", default-features = false, features = ["hashbrown", "vulkan"] }
hashbrown = "0.16.1"
log = "0.4.29"
thiserror = "2.0.17"
winit = "0.30.12"
