[package]
name = "vk12_rhi2"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
ash = "0.38.0"
ash-window = "0.13.0"
winit = "0.30.13"
log = "0.4.29"
rhi2 = { path = "../rhi2" }
gpu-allocator = "0.28.0"
naga = { version = "28.0.0", features = ["wgsl-in", "spv-out"] }
hashbrown = "0.16.1"
